# mlops-zoomcamp

./: .gitignore  pyproject.toml
playground/02-experiment-tracking/: duration-prediction.ipynb
playground/02-experiment-tracking/running-mlflow-examples/: scenario-1.ipynb  scenario-2.ipynb  scenario-3.ipynb
playground/02-experiment-tracking/running-mlflow-examples/mlruns/0/: meta.yaml
playground/02-experiment-tracking/running-mlflow-examples/mlruns/704888308427444306/: meta.yaml
playground/02-experiment-tracking/running-mlflow-examples/mlruns/704888308427444306/d7810874681e4fcc8970ebb4d3f45271/: meta.yaml
playground/02-experiment-tracking/running-mlflow-examples/mlruns/704888308427444306/d7810874681e4fcc8970ebb4d3f45271/metrics/: accuracy
playground/02-experiment-tracking/running-mlflow-examples/mlruns/704888308427444306/d7810874681e4fcc8970ebb4d3f45271/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
project/: .gitignore  EDA.ipynb  vcf_to_tsv.py
solved_homeworks/01-intro/: duration-prediction.ipynb
solved_homeworks/02-experiment-tracking/: answers.txt
solved_homeworks/02-experiment-tracking/homework/: hpo.py  register_model.py  train.py
