[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "ML Ops Zoomcamp 2024"
authors = ["Odessit007"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
notebook = "^7.2.0"
pysam = "^0.22.1"
mlflow = "^2.13.0"
xgboost = "^2.0.3"
hyperopt = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
